# cargo-duckdb-ext-tools

./: Cargo.toml  README.md  README.zh.md
src/: error.rs  helpers.rs  lib.rs  logging.rs  main.rs
src/commands/: build_command.rs  mod.rs  new_command.rs  package_command.rs
src/options/: build_option.rs  mod.rs  new_option.rs  package_option.rs
